--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,18 @@
+
+/* Seteo de margenes*/
 *{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
+/* configuracion del body */
 body{
     font-family: 'Roboto', sans-serif;
+    margin: 30px;
 }
 
+/* Contenedor principal del index*/
 .container{
     margin: 0 auto;
     width: 90%;
@@ -14,16 +20,15 @@ body{
     overflow: hidden;
 }
 
-.hero{
-    background-image: 
-    linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.2)),
-    url('../imagenes/portada.JPG');
+/* background de la pagina*/
+.fondoprincipal{
+    background-image: url('../imagenes/portada.JPG');
     background-size: cover;
     min-height: 500px;                    
     height: 100vh;
-    color: #fff;
 }
 
+/* Grid del menu principal */
 .nav{
     --state-close: scale(0);
     --state-hamburguer:scale(1);
@@ -36,22 +41,36 @@ body{
     grid-template-columns: repeat(2, max-content);
 }
 
+/* evento target */
 .nav:target{
     --state-menu: translate(0);
     --state-close: scale(1);
     --state-hamburguer:scale(0);
 }
 
+/* Propiedades del Contenedor logo*/
 .nav__logo{
     font-size: 2.5rem;
     z-index: 1;
 }
 
+/* llamada al evento animation de la imagen logo*/
 .nav__logo img{
-    width: 100px;
-
+    width: 150px;
+    animation: rotacion 8s infinite linear;
 }
 
+/* Rotacion de la imagen logo*/
+@keyframes rotacion {
+    from {
+      transform: rotateY(0deg);
+    }
+    to {
+      transform: rotateY(359deg);
+    }
+} 
+
+/* Transicion entre el menu de navegacion y el menu contraible */ 
 .nav__hamburguer, 
 .nav__close{
     cursor: pointer;
@@ -60,18 +79,22 @@ body{
     transition: .4s transform;
 }
 
+/* Cambio de estado del menu contraible */
 .nav__hamburguer{
     transform: var(--state-hamburguer);
 }
 
+/* Cambio de estado del menu navegacion */
 .nav__close{
     transform: var(--state-close);
 }
 
+/* Ancho de los icono del menu */
 .nav__icon{
     width: 40px;
 }
 
+/* Configuracion de los items del menu */
 .nav__links{
     background-color: #000;
     position: absolute;
@@ -80,27 +103,28 @@ body{
     left: 0;
     right: 0;
     padding: 0;
-
     display: grid;
     align-content: center;
     gap: 2em;
     padding-left: 5%;
-
     transform: var(--state-menu);
     transition: .3s transform;
 }
 
+/* Quita de estilos de los item */
 .nav__item{
     list-style: none;
 }
 
-.nav__link{
+/* estilos de los links */
+.nav{
     color: #fff;
     text-decoration: none;
     font-size: 1.2rem;
-    letter-spacing: 2px;
+    letter-spacing: 2px;  
 }
 
+/* mobile first responsive*/
 @media (min-width:768px) {
     .nav{
         --state-hamburguer:scale(0);
@@ -117,9 +141,7 @@ body{
         position: unset;
         gap: 1.5em;
         grid-auto-flow: column;
-
         transform: unset;
-
         grid-column: -2/-1;
         grid-row: 1/2;
     }
@@ -130,68 +152,12 @@ body{
     }
 }
 
-/* Fondo de pantalla principal
-.portada{
-    margin: 0px;
-    background-image: url("/imagenes/portada.JPG");
-    background-repeat: no-repeat;
-    background-size: 100vw 100vh;
-}
 
- Fondo de pantalla del menu
+/* Fondo de pantalla del menu*/
 .opaco{
-    margin: 0px;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("imagenes/portadaopaca.JPG");
-}
-
-/* Encabezado principal 
-header{
-    display: flex;
-    height: 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: x-large;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 2px;
-    padding-right: 10px ;
-}
-
-/* Contenedor Logo de la compañia 
-.logo{
-    display: flex;
-    align-items: center;
-    margin-left: 30px;
-    margin-top: 70px;
-    padding-top: 30px;
-}
-
-/* Logo imagen de la compañia 
-.logo img{
-    width: 70%;    
-    height: 70%;
-}
-
-/* Estilo de los items del menu    
-a{
-    text-decoration: none;
-    color: white;
-}
-
-/* Inicio de seccion del menu 
-nav a{
-    font-weight: 300;
-    padding-top: 100px;
-    margin-right: 50px;
-    align-items: baseline;
-}
-
-/* Evento hover: cuando el cursor esta encima de a alguno de los item del menu la letra cambia a color azul 
-nav a:hover{
-    color: blue ;
-    font-size: xx-large;
-    cursor: pointer;
+    background-image: url("../imagenes/portadaopaca.JPG");
 }
 
 /* Imagenes de las redes sociales instagram y facebook */
@@ -201,172 +167,11 @@ nav a:hover{
     text-align:center;
 }
 
-/* Encabezado principal del cuerpo de la pagina 
-h1{
-    text-align: center;
-    margin-top: 100px;
-    margin-bottom: 20px;
-    color:darkblue;   
-}
-
-/* Definicion del pie de pagina 
+/* Definicion del pie de pagina */
 footer{
-    margin-top: 50px;
+    margin: top 50px;
     text-align: center;
+    bottom: 0;
+    height: 40px;
     background-color: bisque;
 }
-
-/* Propiedades de las imagenes de la seccion Nuestra historia 
-.CuerpoHistoria img
-{
-   height: auto;
-   width: auto;
-   max-width: 500px;
-   max-height: 500px;
-   border-radius: 100px;
-   border-width: 500px;
-   border-color:blue;
-   padding: 20px;
-}
-
-/* Propiedades del contenedor de la seccion historia 
-.CuerpoHistoria{
-    text-align:justify;
-    margin-top: 120px;
-    margin-bottom: 50px;
-}
-
-/* Propiedades del Contenedor principal de la seccion catalogo  
-.vector_catalogo{
-    width:800px;
-    height:auto;
-    position:relative;
-    margin-top:50px;
-    margin-left: 350px;
-    margin-bottom: 100px;
-}
-
-/* Propiedades del Contenedor de la seccion catalogo 
-.contenedor_catalogo{
-    position:relative;
-    display:inline-block;
-    align-content: space-between;
-    overflow:hidden;
-    padding: 10px;
-}
-
-/* Imagenes de los catalogos  
-.contenedor_catalogo img{
-    height: 200px;
-    width: 200px;
-}
-
-/* Propiedades principales del menu catalogo 
-.menu_catalogo{
-    float:left;
-    padding-top: 100px;
-    padding-left: 50px;
-}
-
-/* Contenedor principal del menu
-.menu{
-    padding-top: 100px;
-    padding-right: 30px;
-}
-
-/* Estilo y posicionamiento de la direccion de la pagina 
-.direccion{
-    color:antiquewhite;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: large;
-    position:absolute;
-    top:550px;
-    left: 800px;
-}
-
-/* Estilos del boton agregar al carrito del menu catalogo 
-.menu_catalogo input{
-    background-color: cornflowerblue;
-    color: aliceblue;
-    border:3px solid cornflowerblue;
-    border-radius: 20px;
-    cursor: pointer;
-    margin-top: 50px;
-    margin-left: 40px;
-}
-
-/* Estilo del titulo de la seccion ofertas /
-.ofertas h1{
-    position: absolute;
-    align-items:center;
-    top: 50px;
-    margin-left: 550px;
-}
-
-/* Estilos del boton agregar al carrito del menu ofertas /
-.ofertas input{
-    background-color: cornflowerblue;
-    color: aliceblue;
-    cursor: pointer;
-    margin-top: 130px;
-    margin-left: 1100px;
-}
-
-/* Contenedor principal de las imagenes del menu oferta /
-.vector_ofertas{
-    width:1400px;
-    height:auto;
-    position:relative;
-    margin-top:50px;
-    margin-left: 50px;
-}
-
-/* Contenedor de las imagenes del menu oferta 
-.contenedor_ofertas{
-    position:relative;
-    display:inline-block;
-    align-content: space-between;
-    overflow:hidden;
-    padding: 15px;
-}
-
-/* propiedades de las imagenes del menu oferta 
-.contenedor_ofertas img{
-    height: 400px;
-    width: 350px;
-    max-width: auto;
-    max-height: auto;
-}
-
-/* Formulario contacto */
-.form_contacto{
-    display:inline-block;
-}
-
-/* Contenedor principal del menu oferta */
-.contenedor_contacto{
-    width : 250px;
-    padding: 5px;
-    margin: 0px;
-    margin-top: 20px;
-    box-sizing: border-box;
-    margin-left: 375px;
-}
-
-/* Definicion del ancho de las cajas de texto del menu contacto */  
-.contenedor_contacto input,textarea{
-    width: 500px;
-}
-
-/* Propiedades del boton enviar del menu contacto */
-.boton_enviar{
-    width: 100px;
-    height: 50px;
-    margin-left: 390px;
-    margin-bottom: 50px;
-} 
-
-
-
-
-
