--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,3 @@
-
 /* Seteo de margenes*/
 *{
     margin: 0;
@@ -14,7 +13,7 @@ body{
 /* Contenedor principal del index*/
 .container{
     margin: 0 auto;
-    width: 90%;
+    width: 100%;
     max-width: 1200px;
     overflow: hidden;
 }
@@ -149,6 +148,33 @@ body{
         font-size: 1rem;
         letter-spacing: none;
     }
+
+    .nav__link:hover{
+        animation: letra 1.5s infinite;
+        font-size: larger;
+    }
+
+    @keyframes letra {
+        0% {
+            color: darkseagreen;
+            font-size: 1.25rem;
+        }
+        33% {
+            color: aquamarine;
+            font-size: 1.3rem;    
+        }
+        66%
+            {
+            color: greenyellow;
+            font-size: 1.25rem;
+            }
+        100%
+            {
+                color: yellow;
+                font-size: 1.2rem;
+            }
+        
+    }
 }
 
 
@@ -174,3 +200,5 @@ footer{
     height: 40px;
     background-color: bisque;
 }
+
+
