--- a/scss/styles.css
+++ b/scss/styles.css
@@ -22,8 +22,7 @@ body {
 .fondoprincipal {
   background-image: url("../imagenes/portada.JPG");
   background-size: cover;
-  min-height: 500px;
-  height: 100vh;
+  background-repeat: no-repeat;
 }
 
 /* Grid del menu principal */
@@ -216,4 +215,19 @@ footer {
   bottom: 0;
   height: 40px;
   background-color: bisque;
+}
+
+.slider {
+  background-position: 70% 150px, cover;
+  background-repeat: no-repeat;
+}
+
+.fav {
+  width: 24px;
+  height: 24px;
+}
+
+#galeria img {
+  width: 100%;
+  height: 300px;
 }/*# sourceMappingURL=styles.css.map */
