--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,8 +1,10 @@
+@charset "UTF-8";
 /* Seteo de margenes*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 /* configuracion del body */
@@ -28,7 +30,7 @@ body {
 /* Grid del menu principal */
 .nav {
   --state-close: scale(0);
-  --state-hamburguer:scale(1);
+  --state-hamburguer: scale(1);
   --state-menu: translate(-100%);
   padding: 40px 0;
   display: grid;
@@ -42,17 +44,11 @@ body {
 .nav:target {
   --state-menu: translate(0);
   --state-close: scale(1);
-  --state-hamburguer:scale(0);
-}
-
-/* Propiedades del Contenedor logo*/
-.nav__logo {
-  font-size: 2.5rem;
-  z-index: 1;
+  --state-hamburguer: scale(0);
 }
 
 /* llamada al evento animation de la imagen logo*/
-.nav__logo img {
+.nav__logo {
   width: 150px;
   -webkit-animation: rotacion 8s infinite linear;
           animation: rotacion 8s infinite linear;
@@ -132,7 +128,7 @@ body {
 /* mobile first responsive*/
 @media (min-width: 768px) {
   .nav {
-    --state-hamburguer:scale(0);
+    --state-hamburguer: scale(0);
     --state-menu: translate(0);
   }
   .nav:target {
@@ -202,32 +198,87 @@ body {
 }
 
 /* Imagenes de las redes sociales instagram y facebook */
+.redes {
+  padding-top: 50px;
+  padding-left: 10px;
+}
 .redes img {
   height: 24px;
   width: 24px;
   text-align: center;
 }
 
+/*direccion de la empresa*/
+.direccion_redes {
+  padding-top: 50px;
+  padding-left: 10px;
+}
+
 /* Definicion del pie de pagina */
 footer {
+  overflow: hidden;
   margin: top 50px;
   text-align: center;
-  bottom: 0;
+  bottom: 10px;
   height: 40px;
   background-color: bisque;
 }
 
-.slider {
-  background-position: 70% 150px, cover;
-  background-repeat: no-repeat;
-}
-
+/*tamaño de los iconos*/
 .fav {
   width: 24px;
   height: 24px;
 }
 
+/*Galeria de la seccion ofertas*/
+/*uso de anidacion*/
 #galeria img {
   width: 100%;
   height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* Ajuste de las imagenes al carrousel */
+.imagencatalogo {
+  height: 400px;
+  max-width: 600px;
+  width: 400px;
+  margin: 0 auto;
+}
+
+/* Modificacion de estilos del carrousel */
+/*uso de anidacion*/
+#carouselExample {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#carouselExample h5, #carouselExample p {
+  color: white;
+}
+#carouselExample .bgwhite {
+  color: black;
+}
+
+/*formulario de contacto*/
+/*uso de anidacion y del &*/
+.formulario .form-control {
+  border-color: blueviolet;
+  font-weight: 400;
+  font-size: large;
+  background-color: rgb(158, 235, 210);
+  -webkit-text-decoration: double;
+          text-decoration: double;
+  text-align: center;
+}
+.formulario #botonenviar:hover {
+  background: white;
+  transition: 0.2s;
+  box-shadow: 0 0 10px #a945c7, 0 0 40px #a945c7, 0 0 80px #a945c7;
+}
+
+/* posicionamiento del titulo del menu contacto*/
+#titulocontacto {
+  text-align: center;
+  margin-bottom: 40px;
 }/*# sourceMappingURL=styles.css.map */
