--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -273,3 +273,15 @@ footer {
     text-align:center;
     margin-bottom: 40px;
 }
+
+.CuerpoHistoria{
+    margin: 20px;
+    padding: 10px;
+    margin: auto;
+
+    #fotohistoria{
+        width: 700px;
+        height: 350px;
+        object-fit: cover;
+        }
+}
